# typeloader_reference_parser

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  NEWS.md  README.md  pyproject.toml
data/: countries.csv
tests/: test_country_parser.py  test_typeloader_reference_parser.py
tests/data/: ref.txt
typeloader_reference_parser/: __init__.py  country_parser.py  typeloader_reference_parser_main.py
typeloader_reference_parser/config/: logger.toml
